--- a/计算机网络/计算机网络-物理层.md
+++ b/计算机网络/计算机网络-物理层.md
@@ -1,2 +1,110 @@
 # 计算机网络—物理层学习
 
+## 一.物理层的基本概念
+
+### 1.工作内容
+
+**物理层利用传输介质为通信的两端建立、管理和释放物理链接，实现比特流的透明传输，保证比特流正确的传输到对端。** 物理层中承载的是比特流单位是比特（bit）。
+
+>  类比：
+>
+> 在和朋友聊天，说话内容需要由大脑编排好，然后将你要讲的内容送达到嘴巴，嘴巴通过发出声音让对方听到你说话的内容。并且你在讲话时也无需考虑声波会如何传送到对方的耳朵中的，并且你也看不到声波是如何传达到对方的耳朵中的。这里声波就可以理解为是‘比特流’，你的嘴巴就是提供了‘物理层’的服务。
+>
+> 嘴巴负责开始谈话（建立链接）、判断谈话的开始和结束（管理链接）、结束谈话（释放链接）。并且嘴巴也无需考虑声波是如何传达到对方的耳朵中，所以声波对于嘴巴是透明的。在网络中‘透明’=管理成本低。
+
+### 2.主要任务
+
+可以将物理层的主要任务描述为 **确定与传输媒体接口有关的一些特性。**
+
+-  **机械特性：** 指明接口所用接线器的形状和尺寸、引线数目和排列、固定和锁定装置等等。
+-  **电气特性：** 指明在接口电缆的各条线上出现的电压的范围。
+-  **功能特性：** 指明某条线上出现的某一电平的电压表示何种意义。
+-  **过程特性：** 指明对于不同功能的各种可能事件的出现顺序。
+
+### 3.注意事项
+
++ 物理层考虑的是 **<font color = 0xff0000>怎样才能在连接各种计算机的传输媒体上传输数据比特流，而不是指具体的传输媒体。</font>**
+
++ 物理层的作用是要尽可能地屏蔽掉不同传输媒体和通信手段的差异，使得上面的链路层感觉不到这些差异，这样就可使数据链路层只需要考虑如何完成本层的协议与服务，而不必考虑网络具体的传输媒体和通信手段是什么。
+
+---
+
+## 二.物理层通信基础
+
+- 传输数据的单位：比特
+- 数据传输系统：源系统（源点、发送器） --> 传输系统 --> 目的系统（接收器、终点）
+
+### 1.数据传输类型
+
+在物理层的传输介质中传输的信号共分为两种， **模拟信号、数字信号** ，家里的电话、有线电视就是用的模拟信号，电脑上网就用的是数字信号。
+
+说到模拟信号就必须说一下modem（猫：调制解调器），因为最早的家用网络是通过电话线进行上网的，所以需要使用modem将数字信号和模拟信号进行相互转换。
+
++ 调制： 将数字信号转换为模拟信号
+
++ 解调： 将模拟信号转换为数字信号
+
+### 2.数据传输方式
+
+#### **物理层数据传输按照使用的信道数量可以分为串行通信和并行通信**
+
++ 串行通信：将一个字符的二进制代码按从低位到高位顺序传输，传输中需要建立一个信道。
+
++ 并行通信：将一个字符的二进制代码同时通过8条信道同时传输，每发送一个字符都需要建立8条信道，成本较高。
+
+#### **按照信号发送的方向和时间关系可分为单工、半双工、全双工**
+
+- 单向通道（单工通道）：只有一个方向通信，没有反方向交互，如广播
+- 双向交替通信（半双工通信）：通信双方都可发消息，但不能同时发送或接收
+- 双向同时通信（全双工通信）：通信双方可以同时发送和接收信息
+
+### 3.通道复用技术：
+
+-  **频分复用（FDM，Frequency Division Multiplexing）：** 不同用户在不同频带，所用用户在同样时间占用不同带宽资源
+-  **时分复用（TDM，Time Division Multiplexing）：** 不同用户在同一时间段的不同时间片，所有用户在不同时间占用同样的频带宽度
+-  **波分复用（WDM，Wavelength Division Multiplexing）：** 光的频分复用
+-  **码分复用（CDM，Code Division Multiplexing）：** 不同用户使用不同的码，可以在同样时间使用同样频带通信
+
+### 4.传输媒体
+
+>  主要是导引型和非导引型传输媒体。
+
+#### 引导型传输媒体
+
++ 双绞线：
+  + 分为无屏蔽双绞线和屏蔽双绞线。
+  + 特点：价格便宜，抗干扰性差，既可用来传输模拟信号又可用来传输数字信号。
+
++ 同轴电缆：
+  + 一般用50欧姆和75欧姆。
+  + 同轴电缆具有很好的抗干扰特性，被广泛用于传输较高速率的数据 )，也是同样可以数字信号/模拟信号。
+
++ 光缆：
+  + 光纤是光纤通信的传输媒体。分为多模光纤和单模光纤。
+  + 传输带宽远远大于目前其他各种传输媒体的带宽。
+
+#### 非引导型传输媒体
+
+> 保密性差
+
++ 短波通信：
+  + 主要是靠电离层的反射，但短波信道的通信质量较差。
+
++ 微波通信：
+
+  + 无线电**微波通信**在数据通信中占有重要地位
+
+  + 微波在空间主要是直线传播。
+
+  + 微波通信主要是基站直视和卫星通信，抗干扰性好。
+
+    
+
+
+
+
+
+
+
+
+
