--- a/计算机网络/计算机网络-数据链路层.md
+++ b/计算机网络/计算机网络-数据链路层.md
@@ -95,7 +95,7 @@
 
 在传输过程中可能会产生比特差错：1 可能会变成 0， 而 0 也可能变成 1
 
-<img src="../图片/Network12.png" style="zoom:40%;" />
+<div align = center><img src="../图片/Network12.png" width="600px" /></div>
 
 **纠错方法：循环冗余检验**
 
@@ -136,7 +136,7 @@
 
 只要经过严格的挑选，并使用位数足够多的除数 P，那么出现检测不到的差错的概率就很小很小
 
-<div align = center><img src="../图片/Network15.png" style="zoom:40%;" /></div>
+<div align = center><img src="../图片/Network15.png" width="650px"/></div>
 
 
 
