--- a/计算机网络/计算机网络-网络层.md
+++ b/计算机网络/计算机网络-网络层.md
@@ -1,2 +1,307 @@
 # 计算机网络—网络层学习
 
+## 一.网络层的基本概念
+
+### 1.工作内容
+
+**网络层** 是OSI模型中的第三层（TCP/IP模型中的网际层），提供 **路由** 和 **寻址** 的功能，使两终端系统能够互连且决定最佳路径，并具有一定的拥塞控制和流量控制的能力。相当于发送邮件时需要地址一般重要。由于TCP/IP协议体系中的网络层功能由IP协议规定和实现，故又称IP层。
+
+因为网络层是整个互联网的核心，因此应当让网络层尽可能简单。网络层向上只提供简单灵活的、无连接的、尽最大努力交互的数据报服务。使用 IP 协议，可以把异构的物理网络连接起来，使得在网络层看起来好像是一个统一的网络。
+
+<div align = center><img src="../图片/Network 19.png" width="500px" /></div>
+
+### 2.需要学习的主要内容
+
+1. IP地址编址方式
+
+2. IP地址子网划分
+3. IP数据报格式
+4. 地址解析协议ARP
+5. 网际控制报文协议 ICMP
+6. IPv6
+7. 路由器的结构
+8. 路由器分组转发流程
+9. 路由选择协议
+10. 虚拟专用网VPN
+11. 网络地址转换协议 NAT
+
+---
+
+## 二.IP地址编址方式
+
+### 1.IP地址及其表示方法
+
+IP地址是给互联网中的每一台主机或路由的每一个接口分配一个在全世界范围内是唯一的32位的标识符。
+
+IP 地址的编址方式经历了三个历史阶段：
+
+- 分类
+- 子网划分
+- 无分类
+
+IP地址由两部分组成，网络号和主机号，其中不同分类具有不同的网络号长度，并且是固定的。
+
+<div align = center>IP 地址 ::= {< 网络号 >, < 主机号 >}</div>
+
+### 2.IP地址分类
+
+下图给出了各种IP地址的网络号字段和主机号字段，这里A类，B类，C类地址都是单播地址，是最常用的。
+
+<div align = center><img src="../图片/Network19.png" width="500px" /></div>
+
+| IP 地址类别 | 网络号                                 | 网络范围               | 主机号 | IP 地址范围                  |
+| ----------- | -------------------------------------- | ---------------------- | ------ | ---------------------------- |
+| A 类        | 8bit，第一位固定为 0                   | 0 —— 127               | 24bit  | 1.0.0.0 —— 127.255.255.255   |
+| B 类        | 16bit，前两位固定为 10                 | 128.0 —— 191.255       | 16bit  | 128.0.0.0 —— 191.255.255.255 |
+| C 类        | 24bit，前三位固定为 110                | 192.0.0 —— 223.255.255 | 8bit   | 192.0.0.0 —— 223.255.255.255 |
+| D 类        | 前四位固定为 1110，后面为多播地址      |                        |        |                              |
+| E 类        | 前五位固定为 11110，后面保留为今后所用 |                        |        |                              |
+
+三种常用类别IP地址的注意事项：
+
+> **A 类地址**
+>
+> + A 类地址的网络号字段占一个字节，只有7位可供使用，但可指派的网络号是126个(2^7 - 2)，减2的原因：
+>   + IP地址网络地址号全0表示this，是一个保留地址，表示“本网络”
+>   + 网络地址号为127留作本地软件 **环回测试** 本主机的进程之间的通信之用
+> + A类地址的主机号占3个字节，最大主机数是2^24 - 2，减2的原因：
+>   + 全0的主机号字段表示该IP地址是“本主机”所连接到的单个网络地址。
+>   + 全1表示all，表示该网络上的所有主机。
+>
+> **B 类地址**
+>
+> + B类地址的网络地址号占两个字节，前面10已经固定，剩余14位可以进行分配。因为不会出现两个字节全0或全1的情况，所以不存在减2的问题。但是128.0.0.0还是不指派，能指派的最小网络地址是128.1.0.0。因此B类地址可指派的网络数为2^14 - 1。
+> + B类地址的每一个网络上的最大主机数是2^16 - 2，减2是因为要扣除全0全1的主机号。
+>
+> **C类地址**
+>
+> + 网络号与B类地址一样，192.0.0.0 不指派，最小的网络号为192.0.1.0
+> + C类地址的每一个网络上的最大主机数是2^8 - 2，减2是因为要扣除全0全1的主机号。
+
+### 3.IP地址与硬件地址
+
+从层次的角度上看：
+
++ 硬件地址是数据链路层和物理层使用的地
++ IP地址是网络层和以上各层使用的地址，是一种逻辑地址
+
+<div align = center><img src="../图片/Network20.png" width="500px" /></div>
+
+在发送数据时，数据从高层下到底层，然后才到通信链路上传输。使用IP地址的IP数据报一旦交给了数据链路层，就被封装成了MAC帧。MAC帧在传送时使用的源地址和目的地址都是硬件地址，这两个硬件地址都写在了MAC帧的首部。
+
++ IP地址在IP数据报的首部
++ 硬件地址在MAC帧的首部
+
+IP地址放入数据链路层的MAC帧中以后，整个IP数据报就称为了MAC帧的数据，因而在数据链路层看不到数据报的IP地址。
+
+<div align = center><img src="../图片/Network21.png" width="500px" /></div>
+
+从上图可以看出，数据从主机H1，传到主机H2，IP数据报中的IP地址的源地址与目的地址是没有发生改变的，而在MAC帧中，每次经过路由器，硬件地址的源地址与目的地址都发生了改变。
+
+---
+
+## 三.IP地址子网划分
+
+### 1.划分子网
+
+#### 划分子网的基本思路
+
+划分子网纯属一个单位内部的事情。单位对外仍然表现为没有划分子网的网络。从主机号借用若干个位作为子网号 subnet-id，而主机号 host-id 也就相应减少了若干个位。
+
++ 例子
+
+  + 下图是一个B类IP地址，网络地址是145.13.0.0(网络号为145.13)。凡目的地址为145.13.x.x的数据报都是被送到这个网络上的路由器R1。
+
+    <div align = center><img src="../图片/Network32.png" width="500px" /></div>
+
+  + 下图把网络划分为三个子网。假定子网号占8位，因此在增加了子网号之后，主机号就只有8位。所以划分的三个子网分别是：145.13.3.0，145.13.7.0，和145.13.21.0。划分为三个子网后对外仍是一个网络，其网络地址仍是145.13.0.0。但网络145.13.0.0上的路由器R1在收到外来的数据报后，再根据数据报的目的地址把它转发到相应的子网。
+
+    <div align = center><img src="../图片/Network33.png"  width="500px" /></div>
+
+当没有划分子网时，IP 地址是两级结构。划分子网后 IP 地址就变成了**三级结构**。划分子网只是把 IP 地址的主机号 host-id 这部分进行再划分，而**不改变 IP 地址原来的网络号 net-id。** 
+
+**优点:**
+
+1. 减少了 IP 地址的浪费
+2. 使网络的组织更加灵活
+3. 更便于维护和管理
+
+#### 子网掩码
+
+从一个 IP 数据报的首部并无法判断源主机或目的主机所连接的网络是否进行了子网划分。使用子网掩码 (subnet mask) 可以找出 IP 地址中的子网部分。 
+
+规则：
+
++ 子网掩码长度 ＝ 32 位
++ 某位 ＝ 1：IP地址中的对应位为网络号和子网号
++ 某位 ＝ 0：IP地址中的对应位为主机号 
+
+IP地址的各字段和子网掩码如下图所示：
+
+<div align = center><img src="../图片/Network34.png" width="500px" /></div>
+
+三类IP地址的网络地址和相应的默认子网掩码如下图所示：
+
+<div align = center><img src="../图片/Network35.png" width="500px" /></div>
+
+**子网掩码是一个网络或一个子网的重要属性。** 路由器在和相邻路由器交换路由信息时，必须把自己所在网络（或子网）的子网掩码告诉相邻路由器。
+
++ 利用子网掩码求网络地址的例子：
+
+  已知IP 地址是 141.14.72.24，子网掩码是255.255.192.0。试求网络地址。
+
+  <div align = center><img src="../图片/Network36.png" width="500px"/></div>
+
+### 2.使用子网时分组的转发
+
+在划分子网情况下路由器转发分组的算法： 
+
+1. 从收到的分组的首部提取目的 IP 地址 D。
+2. 先用各网络的子网掩码和 D 逐位相“与”，看是否和相应的网络地址匹配。若匹配，则将分组直接交付。否则就是间接交付，执行步骤3.
+3. 若路由表中有目的地址为 D 的特定主机路由，则将分组传送给指明的下一跳路由器；否则，执行步骤4.
+4. 对路由表中的每一行，将子网掩码和 D 逐位相“与”。若结果与该行的目的网络地址匹配，则将分组传送给该行指明的下一跳路由器；否则，执行步骤5.
+5. 若路由表中有一个默认路由，则将分组传送给路由表中所指明的默认路由器；否则，执行步骤6.
+6. 报告转发分组出错。
+
+### 3.无分类编址(构建超网)
+
+无分类编址 CIDR 消除了传统 A 类、B 类和 C 类地址以及划分子网的概念，使用网络前缀和主机号来对 IP 地址进行编码，网络前缀的长度可以根据需要变化。
+
+<div align = center>IP 地址 ::= {< 网络前缀号 >, < 主机号 >}</div>
+
+CIDR 的记法上采用在 IP 地址后面加上网络前缀长度的方法，例如 128.14.35.7/20 表示 **前 20 位为网络前缀。**
+
+CIDR 的地址掩码可以继续称为子网掩码，子网掩码首 1 长度为网络前缀的长度。
+
+一个 CIDR 地址块中有很多地址，一个 CIDR 表示的网络就可以表示原来的很多个网络，并且在路由表中只需要一个路由就可以代替原来的多个路由，减少了路由表项的数量。把这种通过使用网络前缀来减少路由表项的方式称为路由聚合，也称为 **构成超网** 。
+
+在路由表中的项目由“网络前缀”和“下一跳地址”组成，在查找时可能会得到不止一个匹配结果，应当采用最长前缀匹配来确定应该匹配哪一个。
+
+---
+
+## 四.IP 协议与数据报格式
+
+### 1.IP协议简介
+
+IP协议属于网络层协议，所有的TCP, UDP, ICMP, IGMP数据都通过IP数据报传输。IP提供了一种不可靠，无连接的数据包交付服务。依赖其他层的协议进行差错控制。
+
++  不可靠: IP数据报不保证能成功的到达目的地，如果出现错误则选择丢弃该数据，然后发送ICMP消息报给信源端 
++ 无连接: IP不提供任何后续数据报的状态信息，每个数据报处理都是独立的。如果一个信源发送了连续的两个数据报，每个数据报选择独立的路由，两个数据可能不同时到达。IP通信双方都不长久地维持对方的任何信息。这样上层协议每次发送数据的时候，都必须明确指定对方的IP地址。
+
+与 IP 协议配套使用的还有三个协议：
+
+- 地址解析协议 ARP（Address Resolution Protocol）
+- 网际控制报文协议 ICMP（Internet Control Message Protocol）
+- 网际组管理协议 IGMP（Internet Group Management Protocol）
+
+<div align = center ><img src="../图片/Network22.png" width="350px" /></div>
+
+> ARP 画在最下面，因为IP经常使用这个协议。
+>
+> ICMP与IGMP画在这一层的上部，因为它们要使用IP协议。
+
+### 2.IP数据报的格式
+
+在TCP/IP的标准中，各种数据格式常常以32位(4字节)为单位来进行描述。下图为IP数据报的完整格式。
+
+<div align = center><img src="../图片/Network23.png" width="700px" /></div>
+
+- **版本** : 有 4（IPv4）和 6（IPv6）两个值；
+
+- **首部长度** : 占 4 位，因此最大值为 15。值为 1 表示的是 1 个 32 位字的长度，也就是 4 字节。因为固定部分长度为 20 字节，因此该值最小为 5。如果可选字段的长度不是 4 字节的整数倍，就用尾部的填充部分来填充。
+
+- **区分服务** : 用来获得更好的服务，一般情况下不使用。
+
+- **总长度** : 包括首部长度和数据部分长度。
+
+- **生存时间** ：TTL，它的存在是为了防止无法交付的数据报在互联网中不断兜圈子。以路由器跳数为单位，当 TTL 为 0 时就丢弃数据报。
+
+- **协议** ：指出携带的数据应该上交给哪个协议进行处理，例如 ICMP、TCP、UDP 等。
+
+- **首部检验和** ：因为数据报每经过一个路由器，都要重新计算检验和，因此检验和不包含数据部分可以减少计算的工作量。
+
+- **标识** : 在数据报长度过长从而发生分片的情况下，相同数据报的不同分片具有相同的标识符。
+
+- **片偏移** : 和标识符一起，用于发生分片的情况。片偏移的单位为 8 字节。
+
+  <div align = center><img src="../图片/Network24.png" width="700px" /></div>
+
+- 生存时间（TTL，time to live）：占用8位二进制位，它指定了数据报可以在网络中传输的最长时间。
+
+- 协议：占用8位，协议字段指出此数据报携带的数据是使用何种协议，以便使用目的主机的IP层知道应该将数据部分上交给那个协议进行处理。
+
+  + 一些协议和相应的协议字段值如下：
+
+    <div align = center><img src="../图片/Network25.png" width="700px" /></div>
+
+- 首部检验和：占用16位，用于 **数据报首部** 数据有效性的校验，可以保证IP报头区在传输时的正确性和完整性。头部检验和字段是根据IP协议头计算出的检验和，它不对头部后面的数据进行计算。
+
+- 源地址：占用32位二进制数，表示发送端IP地址。
+
+- 目的地址：占用32位二进制数，表述目的端IP地址。
+
+### 3.IP层转发分组的流程
+
+在路由表中，对每一条路由最主要的是以下两个信息：
+
+<div align = center>(目的网络地址，下一条地址)</div>
+
+<div align = center><img src="../图片/Network26.png" width="600px" /></div>
+
+**路由分组转发算法：**
+
+1. 从数据报的首部提取目的主机的IP地址D，得出目的网络地址为N。
+2. 若N就是与此路由器直接相连的某个网络地址，则直接交付；否则执行步骤3。
+3. 若路由表中有目的地址为D的特定主机路由，则把数据报传送给路由表中所指明的下一路由器；否则执行步骤4.
+4. 若路由表中有到达网络N的路由，则把数据报传送给路由表中所指明的下一跳路由器；否则，执行步骤5.
+5. 若路由器中有一个默认路由，则把数据报传送给路由表中所指明的默认路由器；否则执行步骤6.
+6. 报告转发分组出错
+
+---
+
+## 五.地址解析协议ARP
+
+网络层实现主机之间的通信，而链路层实现具体每段链路之间的通信。因此在通信过程中，IP 数据报的源地址和目的地址始终不变，而 MAC 地址随着链路的改变而改变。
+
+<div align = center><img src="../图片/Network27.png" width="700px" /></div>
+
+ARP 实现由 IP 地址得到 MAC 地址。
+
+<div align = center><img src="../图片/Network28.png" width = "500px" /></div>
+
+每个主机都有一个 ARP 高速缓存，里面有本局域网上的各主机和路由器的 IP 地址到 MAC 地址的映射表。
+
+如果主机 A 知道主机 B 的 IP 地址，但是 ARP 高速缓存中没有该 IP 地址到 MAC 地址的映射，此时主机 A 通过广播的方式发送 ARP 请求分组，主机 B 收到该请求后会发送 ARP 响应分组给主机 A 告知其 MAC 地址，随后主机 A 向其高速缓存中写入主机 B 的 IP 地址到 MAC 地址的映射。
+
+<div align = center><img src="../图片/Network29.png" width="600px" /></div>
+
+## 六.网际控制报文协议 ICMP
+
+### 1.ICMP的基本概念
+
+为了更有效地转发 IP 数据报和提高交付成功的机会，在网络层使用了网际控制报文协议ICMP(Internet Control Message Protocol)。ICMP允许主机或路由器报告差错情况和提供相关异常情况的报告。ICMP报文作为IP层数据报的数据，加上数据报的首部，组成 IP 数据报发送出去。
+
+<div align = center><img src="../图片/Network30.png" width="500px" /></div>
+
+ICMP 报文分为差错报告报文和询问报文。
+
+<div align = center><img src="../图片/Network31.png" width="600px" /></div>
+
+### 2.ICMP 的应用
+
+#### (1). Ping
+
+Ping 是 ICMP 的一个重要应用，主要用来测试两台主机之间的连通性。
+
+Ping 的原理是通过向目的主机发送 ICMP Echo 请求报文，目的主机收到之后会发送 Echo 回答报文。Ping 会根据时间和成功响应的次数估算出数据包往返时间以及丢包率。
+
+#### 2. Traceroute
+
+Traceroute 是 ICMP 的另一个应用，用来跟踪一个分组从源点到终点的路径。
+
+Traceroute 发送的 IP 数据报封装的是无法交付的 UDP 用户数据报，并由目的主机发送终点不可达差错报告报文。
+
+- 源主机向目的主机发送一连串的 IP 数据报。第一个数据报 P1 的生存时间 TTL 设置为 1，当 P1 到达路径上的第一个路由器 R1 时，R1 收下它并把 TTL 减 1，此时 TTL 等于 0，R1 就把 P1 丢弃，并向源主机发送一个 ICMP 时间超过差错报告报文；
+- 源主机接着发送第二个数据报 P2，并把 TTL 设置为 2。P2 先到达 R1，R1 收下后把 TTL 减 1 再转发给 R2，R2 收下后也把 TTL 减 1，由于此时 TTL 等于 0，R2 就丢弃 P2，并向源主机发送一个 ICMP 时间超过差错报文。
+- 不断执行这样的步骤，直到最后一个数据报刚刚到达目的主机，主机不转发数据报，也不把 TTL 值减 1。但是因为数据报封装的是无法交付的 UDP，因此目的主机要向源主机发送 ICMP 终点不可达差错报告报文。
+- 之后源主机知道了到达目的主机所经过的路由器 IP 地址以及到达每个路由器的往返时间。
