--- a/计算机网络/计算机网络-网络层.md
+++ b/计算机网络/计算机网络-网络层.md
@@ -19,11 +19,10 @@
 4. 地址解析协议ARP
 5. 网际控制报文协议 ICMP
 6. IPv6
-7. 路由器的结构
-8. 路由器分组转发流程
-9. 路由选择协议
-10. 虚拟专用网VPN
-11. 网络地址转换协议 NAT
+7. 路由器简介
+8. 路由选择协议
+9. 虚拟专用网VPN
+10. 网络地址转换协议 NAT
 
 ---
 
@@ -305,3 +304,238 @@ Traceroute 发送的 IP 数据报封装的是无法交付的 UDP 用户数据报
 - 源主机接着发送第二个数据报 P2，并把 TTL 设置为 2。P2 先到达 R1，R1 收下后把 TTL 减 1 再转发给 R2，R2 收下后也把 TTL 减 1，由于此时 TTL 等于 0，R2 就丢弃 P2，并向源主机发送一个 ICMP 时间超过差错报文。
 - 不断执行这样的步骤，直到最后一个数据报刚刚到达目的主机，主机不转发数据报，也不把 TTL 值减 1。但是因为数据报封装的是无法交付的 UDP，因此目的主机要向源主机发送 ICMP 终点不可达差错报告报文。
 - 之后源主机知道了到达目的主机所经过的路由器 IP 地址以及到达每个路由器的往返时间。
+
+---
+
+
+
+## 七. IPv6
+
+### 1.IPv6特征
+
+IPv6 仍支持无连接的传送，但将协议数据单元 PDU 称为分组。为方便起见，本书仍采用数据报这一名词。
+所引进的主要变化如下：
+
++ 更大的地址空间。IPv6 将地址从 IPv4 的 32 位 增大到了 128 位。 
++ 扩展的地址层次结构。 
++ 灵活的首部格式。 IPv6 定义了许多可选的扩展首部。
++ 改进的选项。 IPv6 允许数据报包含有选项的控制信息，其选项放在有效载荷中。
++ 允许协议继续扩充。 
++ 支持即插即用（即自动配置）。因此 IPv6 不需要使用 DHCP。
++ 支持资源的预分配。  IPv6 支持实时视像等要求，保证一定的带宽和时延的应用。
++ IPv6 首部改为 8 字节对齐。首部长度必须是 8 字节的整数倍。原来的 IPv4 首部是 4 字节对齐。
+
+### 2.IPv6数据报格式
+
+IPv6 数据报由两大部分组成：
+
+- 基本首部 (base header)
+- 有效载荷 (payload)。有效载荷也称为净负荷。有效载荷允许有零个或多个扩展首部 (extension header)，再后面是数据部分。
+
+<div align = center><img src="../图片/Network37.png" width="500px" /></div>
+
+
+
+与IPv4相比，IPv6对首部中的某些字段进行了如下的更改：
+
++ 取消了首部长度字段，因为它的首部长度是固定的。
++ 取消了服务类型字段，因为优先级和流标号字段实现了服务类型字段的功能。
++ 取消了总长度字段，改为有效载荷长度字段。
++ 取消了标识，标志，片偏移字段，因为这些功能已经包含在分片扩展首部中。
++ 把TTL字段改为跳数限制字段，但作用是一样的。
++ 取消了协议字段，改用下一个首部字段。
++ 取消了检验和字段，这样就加快了路由器处理数据的速度。
++ 取消了选项字段，而用扩展首部来实现选项功能。
+
+IPv6基本首部中各字段的作用：
+
+<div align = center><img src="../图片/Network40.png" width="550px" /></div>
+
++ **版本（Version）**
+  + 版本字段用来表示IP数据报使用的是IPv6协议封装，占4位，对应值为6（0110）。
+
++ **通信分类（Traffic Class）**
+  + 通信分类字段用来标识对应IPv6的通信流类别，或者说是优先级别，占8位。
+
++ **流标签（Flow Label）**
+  + 流标签字段时IPv6数据报中新增的一个字段，占20位，可用来标记报文的数据流类型，以便在网络层区分不同的报文。流标签字段有源节点分配，通过流标签、源地址、目的地址三元组方式就可以唯一标识一条通信流，而不用像IPv4那样需要使用五元组方式（源地址、目的地址、源端口、目的端口和传输层协议号）。这样发动的最大好处有两点：一是流标签可以和任意的关联，需要标识不同类型的流（可以是非五元组）时，无需对流标签做改动；二是流标签在IPv6基本头中，使用IPSec时此域对转发路由器可见，因此转发路由器可以在使用IPv6报文IPSec的情况下仍然可以通过三元组（流标签、源地址、目的地址）针对特定的流进行QoS（质量服务）处理。
+
++ **有效载荷长度（PayLoad Length）**
+  + 有效载荷长度字段是以字节为单位的标识IPv6数据报中有效载荷部分（包括所有扩展报头部分）的总长度，也就是除了IPv6的基本报头以外的其他部分的总长度，占20位。
+
++ **下一个头部（Next Header）**
+  + 下一个头部字段用来标识当前报头（或者扩展报头）的下一个头部类型，占8位。每种扩展报头都有其对应的值。下一个头部字段内定义的扩展报头类型与IPv4中的协议字段值类似，但在IPv6数据报中，紧接着IPv6报头的可能不是上层协议头部（当没有扩展报头或者为最后一个扩展报头时才是上层协议头），而是IPv6扩展报头。这一机制下处理扩展报头更搞笑，因为标识了数据报中对应的上层协议或者扩展报头类型，转发路由器只需处理必须处理的扩展报头，提高了转发效率。
+
++ **跳数限制（Hop Limit）**
+  + 跳数限制于IPv4报文中的TTL字段类似，指定了报文可以有效转发的次数，占8位。报文每经过一个路由器结点，跳数值就减1，当此字段值减到0时，则直接丢弃该报文。
+
++ **源地址（Source IP Address）**
+  + 源IP地址字段标识了发送该IPv6报文源节点的IPv6地址，占128位。
+
++ **目的IP地址（Destination IP Address）**
+  + 目的IP地址字段标识了IPv6报文的接受节点的IPv6地址，占128位。
+
+### 3.IPv4 转 IPv6
+
+向 IPv6 过渡只能采用逐步演进的办法，同时，还必须使新安装的 IPv6 系统能够向后兼容：IPv6 系统必须能够接收和转发 IPv4 分组，并且能够为 IPv4 分组选择路由。
+
+两种向 IPv6 过渡的策略：
+
+- 使用双协议栈
+- 使用隧道技术
+
+#### 双协议栈
+
+双协议栈 (dual stack) 是指在完全过渡到 IPv6 之前，使一部分主机（或路由器）装有两个协议栈，一个 IPv4 和一个 IPv6。 双协议栈的主机（或路由器）记为 IPv6/IPv4，表明它同时具有两种 IP 地址：一个 IPv6 地址和一个 IPv4 地址 双协议栈主机在和 IPv6 主机通信时是采用 IPv6 地址，而和 IPv4 主机通信时就采用 IPv4 地址 根据 DNS 返回的地址类型可以确定使用 IPv4 地址还是 IPv6 地址
+
+<div align = center><img src="../图片/Network38.png" width="600px"/></div>
+
+
+
+#### 隧道技术
+
+在 IPv6 数据报要进入 IPv4 网络时，把 IPv6 数据报封装成为 IPv4 数据报，整个的 IPv6 数据报变成了 IPv4 数据报的数据部分 当 IPv4 数据报离开 IPv4 网络中的隧道时，再把数据部分（即原来的 IPv6 数据报）交给主机的 IPv6 协议栈
+
+<div align = center><img src="../图片/Network39.png" width="600px"/></div>
+
+
+
+---
+
+## 八.路由器简介
+
+### 1.路由器的作用
+
+路由器是一种典型的网络层设备。是一种具有多个输入端口和多个输出端口的专用计算机，其任务是转发分组。从路由器某个输入端口收到的分组，按照分组要去的目的地，把该分组从路由器的某个合适的输出端口转发给下一跳路由器。下一跳路由器也是按照这种方法处理分组，直到该分组到达终点。
+
+**路由器的主要作用是：**
+
+- 连通不同的网络。
+- 选择信息传送的线路。选择通畅快捷的近路，能大大提高通信速度，减轻网络系统通信负荷，节约网络系统资源，提高网络系统畅通率，从而让网络系统发挥出更大的效益来。
+
+### 2.路由器的结构
+
+<div align = center><img src="../图片/Network41.png" width="550px" /></div>
+
+从上图可以看出路由器从功能上可以划分为： **路由选择** 和 **分组转发** 。
+
+**路由选择：**
+
++ 路由选择也叫做控制部分，核心部件是路由处理机。任务是根据所选定的路由选择协议构建出路由表，同时经常或定期地和相邻路由器交换路由信息而不断地更新和维护路由表。
+
+**分组转发：**
+
++ 分组转发结构由三个部分组成： **交换结构** 、 **一组输入端口** 和 **一组输出端口** 。
+  + 交换结构的作用就是根据转发表对分组进行处理，将某个输入端口进入的分组从一个合适的输出端口转发出去。
+
+### 3.路由器分组转发流程
+
+<div align = center><img src="../图片/Network42.png" width = "600px" /></div>
+
+- 从数据报的首部提取目的主机的 IP 地址 D，得到目的网络地址 N。
+- 若 N 就是与此路由器直接相连的某个网络地址，则进行直接交付；
+- 若路由表中有目的地址为 D 的特定主机路由，则把数据报传送给表中所指明的下一跳路由器；
+- 若路由表中有到达网络 N 的路由，则把数据报传送给路由表中所指明的下一跳路由器；
+- 若路由表中有一个默认路由，则把数据报传送给路由表中所指明的默认路由器；
+- 报告转发分组出错。
+
+---
+
+## 九.路由选择协议
+
+路由选择协议都是自适应的，能随着网络通信量和拓扑结构的变化而自适应地进行调整。
+
+互联网可以划分为许多较小的自治系统 AS，一个 AS 可以使用一种和别的 AS 不同的路由选择协议。
+
+可以把路由选择协议划分为两大类：
+
+- 自治系统内部的路由选择：RIP 和 OSPF
+- 自治系统间的路由选择：BGP
+
+### 1.内部网关协议 RIP
+
+RIP 是一种基于距离向量的路由选择协议。距离是指跳数，直接相连的路由器跳数为 1。跳数最多为 15，超过 15 表示不可达。
+
+RIP 按固定的时间间隔仅和相邻路由器交换自己的路由表，经过若干次交换之后，所有路由器最终会知道到达本自治系统中任何一个网络的最短距离和下一跳路由器地址。
+
+距离向量算法：
+
+- 对地址为 X 的相邻路由器发来的 RIP 报文，先修改报文中的所有项目，把下一跳字段中的地址改为 X，并把所有的距离字段加 1；
+- 对修改后的 RIP 报文中的每一个项目，进行以下步骤：
+  - 若原来的路由表中没有目的网络 N，则把该项目添加到路由表中；
+  - 否则：若下一跳路由器地址是 X，则把收到的项目替换原来路由表中的项目；否则：若收到的项目中的距离 d 小于路由表中的距离，则进行更新（例如原始路由表项为 Net2, 5, P，新表项为 Net2, 4, X，则更新）；否则什么也不做。
+- 若 3 分钟还没有收到相邻路由器的更新路由表，则把该相邻路由器标为不可达，即把距离置为 16。
+
+RIP 协议实现简单，开销小。但是 RIP 能使用的最大距离为 15，限制了网络的规模。并且当网络出现故障时，要经过比较长的时间才能将此消息传送到所有路由器。
+
+### 2. 内部网关协议 OSPF
+
+开放最短路径优先 OSPF，是为了克服 RIP 的缺点而开发出来的。
+
+开放表示 OSPF 不受某一家厂商控制，而是公开发表的；最短路径优先表示使用了 Dijkstra 提出的最短路径算法 SPF。
+
+OSPF 具有以下特点：
+
+- 向本自治系统中的所有路由器发送信息，这种方法是洪泛法。
+- 发送的信息就是与相邻路由器的链路状态，链路状态包括与哪些路由器相连以及链路的度量，度量用费用、距离、时延、带宽等来表示。
+- 只有当链路状态发生变化时，路由器才会发送信息。
+
+所有路由器都具有全网的拓扑结构图，并且是一致的。相比于 RIP，OSPF 的更新过程收敛的很快。
+
+### 3.外部网关协议 BGP
+
+BGP（Border Gateway Protocol，边界网关协议）
+
+AS 之间的路由选择很困难，主要是由于：
+
+- 互联网规模很大；
+- 各个 AS 内部使用不同的路由选择协议，无法准确定义路径的度量；
+- AS 之间的路由选择必须考虑有关的策略，比如有些 AS 不愿意让其它 AS 经过。
+
+BGP 只能寻找一条比较好的路由，而不是最佳路由。
+
+每个 AS 都必须配置 BGP 发言人，通过在两个相邻 BGP 发言人之间建立 TCP 连接来交换路由信息。
+
+<div align = center><img src="../图片/Network43.png" width = "600px" /></div>
+
+---
+
+
+
+## 十.虚拟专用网
+
+由于 IP 地址的紧缺，一个机构能申请到的 IP 地址数往往远小于本机构所拥有的主机数。并且一个机构并不需要把所有的主机接入到外部的互联网中，机构内的计算机可以使用仅在本机构有效的 IP 地址（专用地址）。
+
+有三个专用地址块：
+
+- 10.0.0.0 ~ 10.255.255.255
+- 172.16.0.0 ~ 172.31.255.255
+- 192.168.0.0 ~ 192.168.255.255
+
+VPN 使用公用的互联网作为本机构各专用网之间的通信载体。专用指机构内的主机只与本机构内的其它主机通信；虚拟指好像是，而实际上并不是，它有经过公用的互联网。
+
+下图中，场所 A 和 B 的通信经过互联网，如果场所 A 的主机 X 要和另一个场所 B 的主机 Y 通信，IP 数据报的源地址是 10.1.0.1，目的地址是 10.2.0.3。数据报先发送到与互联网相连的路由器 R1，R1 对内部数据进行加密，然后重新加上数据报的首部，源地址是路由器 R1 的全球地址 125.1.2.3，目的地址是路由器 R2 的全球地址 194.4.5.6。路由器 R2 收到数据报后将数据部分进行解密，恢复原来的数据报，此时目的地址为 10.2.0.3，就交付给 Y。
+
+<div align = center><img src="../图片/Network44.png" width="600px" /></div>
+
+
+
+---
+
+## 十一.VPN网络地址转换协议 NAT
+
+专用网内部的主机使用本地 IP 地址又想和互联网上的主机通信时，可以使用 NAT 来将本地 IP 转换为全球 IP。
+
+在以前，NAT 将本地 IP 和全球 IP 一一对应，这种方式下拥有 n 个全球 IP 地址的专用网内最多只可以同时有 n 台主机接入互联网。为了更有效地利用全球 IP 地址，现在常用的 NAT 转换表把传输层的端口号也用上了，使得多个专用网内部的主机共用一个全球 IP 地址。使用端口号的 NAT 也叫做网络地址与端口转换 NAPT。
+
+<div align = center><img src="../图片/Network45.png" width="700px" /></div>
+
+
+
+
+
+
+
+
+
+---
