--- a/计算机网络/计算机网络-传输层.md
+++ b/计算机网络/计算机网络-传输层.md
@@ -1,2 +1,63 @@
 # 计算机网络—传输层学习
 
+## 一.传输层的基本概念
+
+### 1.工作内容
+
+从通信和信息处理的角度看，运输层向它上面的应用层提供通信服务，它**属于面向通信部分的最高层，同时也是用户功能中的最低层。**
+
+ 当网络的边缘部分中的两个主机使用网络的核心部分的功能进行端到端的通信时，**只有位于网络边缘部分的主机的协议栈才有运输层**，而网络核心部分中的路由器在转发分组时都只用到下三层的功能。
+
+### 2.**网络层和运输层的不同** 
+
+- 网络层是为主机之间提供逻辑通信
+- 运输层为应用进程之间提供端到端的逻辑通信
+
+<div align = center><img src="../图片/Network46.png" width="500px" /></div>
+
+### 3.运输层的重要功能
+
+在一台主机中经常有**多个应用进程同时分别和另一台主机中的多个应用进程通信。** 这表明运输层有一个很重要的功能—— **复用 (multiplexing)** 和 **分用 (demultiplexing)** 。
+
+<div align = center><img src="../图片/Network47.png" width="500px" /></div>
+
++ **复用：**
+
+  在发送方不同的应用程序都可以使用同一个运输层协议传输数据(加上适当的首部)。
+
++ **分用：**
+
+  接收方的运输层在剥去报文的首部后能够把这些数据正确交付目的应用进程。
+
+### 4. 端口
+
+既然提到了运输层为应用进程之间提供端到端的逻辑通信，那么就要详细说一说端口的概念
+
+网络层中，通信的对象为不同的主机，而从运输层的角度来看**，通信的对象为进程，而端口就代表了进程**
+
+也就是说，通过 ip 找到主机，通过端口找到对应进程
+
+- 端口用一个 16 位端口号进行标志。
+- 端口号**只具有本地意义，即端口号只是为了标志本计算机应用层中的各进程。**
+
+由此可见，两个计算机中的进程要互相通信**，不仅必须知道对方的 IP 地址（为了找到对方的计算机），而且还要知道对方的端口号（为了找到对方计算机中的应用进程）**
+
+### 5.屏蔽作用
+
+运输层向高层用户屏蔽了下面网络核心的细节，它使应用进程看见的就是好像在两个运输层实体之间有一条端到端的逻辑通信信道。
+
+<div align = center><img src="../图片/Network48.png" width="500px" /></div>
+
+### 6.需要学习的主要内容
+
+1. 用户数据报协议UDP
+2. 传输控制协议TCP
+3. 可靠传输的工作原理
+4. TCP报文段的首部格式
+5. TCP可靠传输的实现
+6. TCP的流量控制
+7. TCP的拥塞控制
+8. TCP的运输链接管理
+
+---
+
