--- a/Linux操作/2.Linux网络嵌套字编程.md
+++ b/Linux操作/2.Linux网络嵌套字编程.md
@@ -179,9 +179,374 @@ const char *inet_ntop(int family, const void *addrptr, char *strptr, size_t len)
 
 ## 二.基本套接字编程
 
+### 1.创建socket—socket函数
 
++ socket()打开一个网络通讯端口，如果成功的话，就像open()一样返回一个文件描述符，应用程序可以像读写文件一样用read/write在网络上收发数据，如果socket()调用出错则返回-1。
 
++ 对于IPv4，domain参数指定为AF_INET。对于TCP协议，type参数指定为SOCK_STREAM，表示面向流的传输协议。如果是UDP协议，则type参数指定为SOCK_DGRAM，表示面向数据报的传输协议。protocol参数的介绍从略，指定为0即可。
 
++ 头文件与函数调用
+
+  ```c
+  #include <sys/types.h> /* See NOTES */
+  #include <sys/socket.h>
+  int socket(int domain, int type, int protocol);
+  ```
+
++ 参数内容与返回值：
+
+  + domain:
+
+    > 套接字中使用的协议族信息
+
+    + AF_INET 这是大多数用来产生socket的协议，使用TCP或UDP来传输，用IPv4的地址
+    + AF_INET6 与上面类似，不过是来用IPv6的地址
+    + AF_UNIX 本地协议，使用在Unix和Linux系统上，一般都是当客户端和服务器在同一台及其上的时候使用
+
+  + type:
+
+    > 套接字数据传输类型信息
+
+    +   SOCK_STREAM 面向连接的套接字。这个协议是按照顺序的、可靠的、数据完整的基于字节流的连接。这是一个使用最多的socket类型，这个socket是使用TCP来进行传输。
+    +   SOCK_DGRAM 面向消息的套接字。这个协议是无连接的、固定长度的传输调用。该协议是不可靠的，使用UDP来进行它的连接。
+    +   SOCK_SEQPACKET该协议是双线路的、可靠的连接，发送固定长度的数据包进行传输。必须把这个包完整的接受才能进行读取。
+    +   SOCK_RAW socket类型提供单一的网络访问，这个socket类型使用ICMP公共协议。（ping、traceroute使用该协议）
+    +   SOCK_RDM 这个类型是很少使用的，在大部分的操作系统上没有实现，它是提供给数据链路层使用，不保证数据包的顺序
+
+  + protocol:
+
+    > 在前两个参数构成的协议集合下，再选择一个具体的协议。
+    >
+    > 大部分情况下参数传递0，除非同一协议族中存在多个数据传输方式相同的协议。
+
+    + 传0 表示使用默认协议。
+
+  + 返回值：
+
+    + 成功：返回指向新创建的socket的文件描述符，失败：返回-1，设置errno
+
+### 2.命名socket—bind函数
+
+> 创建socket时，我们给它指定了地址族，但是并未指定使用该地址族中哪个具体socket地址，将一个socket与socket地址绑定称为socket命名。
+
++ 服务器程序所监听的网络地址和端口号通常是固定不变的，客户端程序得知服务器程序的地址和端口号后就可以向服务器发起连接，因此服务器需要调用bind绑定一个固定的网络地址和端口号。
+
++ **bind()的作用是将参数sockfd和addr绑定在一起，使sockfd这个用于网络通讯的文件描述符监听addr所描述的地址和端口号。** 
+
++ 头文件与函数调用：
+
+  ```c
+  #include <sys/types.h> /* See NOTES */
+  #include <sys/socket.h>
+  
+  int bind(int sockfd, const struct sockaddr *addr, socklen_t addrlen);
+  ```
+
++ 参数内容与返回值
+
+  + sockfd：
+    + socket文件描述符
+  + addr:
+    + 构造出IP地址加端口号
+  + addrlen:
+    + sizeof(addr)长度
+  + 返回值：
+    + 成功返回0，失败返回-1, 设置errno
+    + 常见的两种errno
+      + EACCES：被绑定的地址是被保护的，仅超级用户能够访问。
+      + EADDRINUSE：被绑定的地址正在使用中。
+
++ 前面讲过，struct sockaddr *是一个通用指针类型，addr参数实际上可以接受多种协议的sockaddr结构体，而它们的长度各不相同，所以需要第三个参数addrlen指定结构体的长度。如：
+
+  ```c
+  struct sockaddr_in servaddr;
+  bzero(&servaddr, sizeof(servaddr));
+  servaddr.sin_family = AF_INET;
+  servaddr.sin_addr.s_addr = htonl(INADDR_ANY);
+  servaddr.sin_port = htons(6666);
+  ```
+
+  > 首先将整个结构体清零，然后设置地址类型为AF_INET，**网络地址为INADDR_ANY，这个宏表示本地的任意IP地址**，因为服务器可能有多个网卡，每个网卡也可能绑定多个IP地址，这样设置可以在所有的IP地址上监听，直到与某个客户端建立了连接时才确定下来到底用哪个IP地址，端口号为6666。
+
+### 3.监听socket—listen函数
+
+> socket被命名之后，还不能马上接受客户连接，需要如下系统用来创建一个监听队列以存放待处理的客户连接。
+
++ 典型的服务器程序可以同时服务于多个客户端，当有客户端发起连接时，服务器调用的accept()返回并接受这个连接，如果有大量的客户端发起连接而服务器来不及处理，尚未accept的客户端就处于连接等待状态，listen()声明sockfd处于监听状态，并且最多允许有backlog个客户端处于连接待状态，如果接收到更多的连接请求就忽略。listen()成功返回0，失败返回-1。
+
++ 头文件与函数调用
+
+  ```c
+  #include <sys/types.h> /* See NOTES */
+  #include <sys/socket.h>
+  int listen(int sockfd, int backlog);
+  ```
+
++ 参数内容
+
+  + sockfd:
+    + socket文件描述符
+
+  + backlog：
+    +  排队建立3次握手队列和刚刚建立3次握手队列的连接数和
+    +  提示内核监听队列的最大长度
+
++ 查看系统默认backlog
+
+  ```bash
+  cat /proc/sys/net/ipv4/tcp_max_syn_backlog
+  ```
+
+### 4.接受连接—accept函数
+
++ 三方握手完成后，服务器调用accept()接受连接，如果服务器调用accept()时还没有客户端的连接请求，就阻塞等待直到有客户端连接上来。
+
++ accept成功时返回一个新的连接socket，该socket唯一地标识了被接受的这个连接，服务器可以通过读写该socket来与被接受连接对应的客户端通信。
+
++ addr是一个传出参数，accept()返回时传出客户端的地址和端口号。addrlen参数是一个传入传出参数（value-result argument），传入的是调用者提供的缓冲区addr的长度以避免缓冲区溢出问题，传出的是客户端地址结构体的实际长度（有可能没有占满调用者提供的缓冲区）。如果给addr参数传NULL，表示不关心客户端的地址。
+
++ 头文件与函数调用
+
+  ```c
+  #include <sys/types.h> 		/* See NOTES */
+  #include <sys/socket.h>
+  int accept(int sockfd, struct sockaddr *addr, socklen_t *addrlen);
+  ```
+
++ 参数内容与返回值
+
+  + sockdf:
+    + socket文件描述符
+  + addr:
+    +  传出参数，返回链接客户端地址信息，含IP地址和端口号
+
+  + addrlen:
+    + 传入传出参数（值-结果）,传入sizeof(addr)大小，函数返回时返回真正接收到地址结构体的大小
+
+  + 返回值：
+    + 成功返回 **<font color = red>一个新的socket文件描述符</font>** ，用于和客户端通信，失败返回-1，设置errno
+
++ 服务器程序结构：
+
+  ```c
+  while (1) {
+  	cliaddr_len = sizeof(cliaddr);
+  	connfd = accept(listenfd, (struct sockaddr *)&cliaddr, &cliaddr_len);
+  	n = read(connfd, buf, MAXLINE);
+  	......
+  	close(connfd);
+  }
+  ```
+
+  > + 整个是一个while死循环，每次循环处理一个客户端连接。
+  > + 由于cliaddr_len是传入传出参数，每次调用accept()之前应该重新赋初值。accept()的参数listenfd是先前的监听文件描述符，而accept()的返回值是另外一个文件描述符connfd，之后与客户端之间就通过这个connfd通讯，最后关闭connfd断开连接，而不关闭listenfd，再次回到循环开头listenfd仍然用作accept的参数。accept()成功返回一个文件描述符，出错返回-1。
+
+### 5.发起连接—connect函数
+
+#### connect 函数
+
++ 客户端需要调用connect()连接服务器，connect和bind的参数形式一致，区别在于bind的参数是自己的地址，而connect的参数是对方的地址。connect()成功返回0，出错返回-1。
+
++ 头文件与函数调用
+
+  ```c
+  #include <sys/types.h> 					/* See NOTES */
+  #include <sys/socket.h>
+  int connect(int sockfd, const struct sockaddr *addr, socklen_t addrlen);
+  ```
+
++ 参数内容与返回值
+
+  + sockdf:
+    + socket文件描述符
+  + addr:
+    + 传入参数，指定服务器端地址信息，含IP地址和端口号
+  + addrlen:
+    + 传入参数,传入sizeof(addr)大小
+  + 返回值：
+    + 成功返回0，失败返回-1，设置errno
+    + 错误情况：
+      + ECONNREFUSED：目标端口不存在，连接被拒绝
+      + ETIMEDOUT：连接超时
+
+### 6.关闭链接—close函数与shutdown函数
+
+关闭一个连接就是关闭连接对应的socket，这可以通过如下关闭普通文件描述符的系统调用来完成：
+
+```c
+#include<unistd.h>
+int close(int fd);
+```
+
++ 参数内容与返回值
+  + fd:
+    + fd是待关闭的socket。close系统调用并非总是关闭一个连接，而是将fd的引用计数减一，当fd的引用计数等于0的时候，才是真正的关闭。
+
+也有半关闭系统调用shutdown函数：
+
+```c
+#include<sys/socket>
+int shutdown(int sockfd, int howto);
+```
+
+sockfd参数是待关闭的socket。howto参数决定了shutdown的行为，它可取表中的值。
+
+<div align = center><img src="../图片/UNIX1.png" width="800px" /></div>
+
+shutdown能够分别关闭socket上的读或者写，或者都关闭。而close在关闭连接时只能将socket上的读写同时关闭。
+
+shutdown成功时返回0，失败返回-1并设置errno。
+
+### 7.地址信息函数
+
+如果想知道一个连接socket的本端socket地址，以及远端的socket地址。下面这两个函数就是用来解决这两个函数：
+
+```c
+#include<sys.socket.h>
+int getsockname(int sockfd, struct sockaddr* address, socklen_t* address_len);
+int getpeername(int sockfd, struct sockaddr* address, socklen_t* address_len);
+```
+
++ getsockname获取sockfd对应的本端socket地址，并将其存储于address参数指定的内存中，该socket地址的长度则存储于address_len参数指定的变量中。如果实际socket地址的长度大于address所指内存区的大小，那么该socket地址将被截断。getsockname成功返回0，失败返回-1，并设置errno。
++ getpeername获取sockfd对应的远端socket地址，其参数及返回值的含义与getsockname的参数以及返回值相同。
+
+### 8.TCP客户/服务器程序示例
+
++ 服务器端：
+
+  ```c
+  #include <stdio.h>
+  #include<stdlib.h>
+  #include <string.h>
+  #include <sys/socket.h>
+  #include <sys/types.h>
+  #include <unistd.h>
+  #include <fcntl.h>
+  #include <ctype.h>
+  #include <arpa/inet.h>
+  
+  # define PORT 6666
+  
+  int main() {
+      //创建socket
+      int sfd = socket(AF_INET, SOCK_STREAM, 0);
+      if(sfd < 0) {
+          perror("socket error");
+          exit(1);
+      }
+  
+      //命名socket
+      struct sockaddr_in serv_addr;
+      bzero(&serv_addr, sizeof(serv_addr));
+      serv_addr.sin_family = AF_INET;
+      serv_addr.sin_port = htons(PORT);
+      serv_addr.sin_addr.s_addr = htonl(INADDR_ANY);
+  
+      if(bind(sfd, (struct sockaddr *)& serv_addr, sizeof(serv_addr)) < 0 ) {
+          perror("bind error");
+          exit(1);
+      }
+  
+      //监听socket
+      if(listen(sfd, 5) < 0) {
+          perror("listen error");
+          exit(1);
+      }
+  
+      printf("wait for client connect ...\n");
+  
+      //链接socket
+      struct sockaddr_in clie_addr;
+       /*获取客户端地址结构大小*/ 
+      socklen_t clie_addr_len = sizeof(clie_addr_len);
+      int cfd = accept(sfd, (struct sockaddr*)&clie_addr, &clie_addr_len);
+      if(cfd < 0) {
+          perror("accpet error");
+          exit(1);
+      }
+  
+      char clie_IP[BUFSIZ];
+      printf("client IP:%s\tport:%d\n", 
+              inet_ntop(AF_INET, &clie_addr.sin_addr.s_addr, clie_IP, sizeof(clie_IP)), 
+              ntohs(clie_addr.sin_port));
+      
+      //处理客户端请求
+      char buf[BUFSIZ];
+      while(1) {
+          /*读取客户端发送数据*/
+          int len = read(cfd, buf, sizeof(buf));
+          write(STDOUT_FILENO, buf, len);
+  
+          /*处理客户端数据*/
+          for (int i = 0; i < len; i++)
+              buf[i] = toupper(buf[i]);
+  
+          /*处理完数据回写给客户端*/
+          write(cfd, buf, len); 
+      }
+  
+      close(cfd);
+      close(sfd);
+  
+      return 0;
+  }
+  ```
+
++ 客户端：
+
+```c
+#include <stdio.h>
+#include<stdlib.h>
+#include <string.h>
+#include <sys/socket.h>
+#include <sys/types.h>
+#include <unistd.h>
+#include <fcntl.h>
+#include <ctype.h>
+#include <arpa/inet.h>
+
+#define SERV_IP "127.0.0.1"
+#define PORT 6666
+
+int main() {
+
+    //创建socket
+    int cfd = socket(AF_INET, SOCK_STREAM, 0);
+    if(cfd < 0) {
+        perror("socket error");
+        exit(1);
+    }
+
+    //连接服务器
+    struct sockaddr_in clie_addr;
+    bzero(&clie_addr, sizeof(clie_addr));
+    clie_addr.sin_family = AF_INET;
+    clie_addr.sin_port = htons(PORT);
+    inet_pton(AF_INET, SERV_IP, &clie_addr.sin_addr.s_addr);
+
+    if(connect(cfd, (struct sockaddr*)&clie_addr, sizeof(clie_addr))) {
+        perror("connect error");
+        exit(1);
+    }
+
+    //向服务器端写内容
+    char buf[BUFSIZ];
+    while(1) {
+        /*从标准输入获取数据*/
+        fgets(buf, sizeof(buf), stdin);
+         /*将数据写给服务器*/
+        write(cfd, buf, strlen(buf));       //写个服务器
+        /*从服务器读回转换后数据*/
+        int len = read(cfd, buf, sizeof(buf));
+        /*写至标准输出*/
+        write(STDOUT_FILENO, buf, len);
+    }
+
+    close(cfd);
+
+    return 0;
+}
+```
 
 
 
