--- a/Linux操作/2.Linux网络嵌套字编程.md
+++ b/Linux操作/2.Linux网络嵌套字编程.md
@@ -179,6 +179,10 @@ const char *inet_ntop(int family, const void *addrptr, char *strptr, size_t len)
 
 ## 二.基本套接字编程
 
+TCP客户端/服务器端套接字通信流程
+
+<div align = "center"><img src="../图片/Net3.png" width="450px" /></div>
+
 ### 1.创建socket—socket函数
 
 + socket()打开一个网络通讯端口，如果成功的话，就像open()一样返回一个文件描述符，应用程序可以像读写文件一样用read/write在网络上收发数据，如果socket()调用出错则返回-1。
