--- a/Linux操作/2.Linux网络嵌套字编程.md
+++ b/Linux操作/2.Linux网络嵌套字编程.md
@@ -307,7 +307,7 @@ TCP客户端/服务器端套接字通信流程
 
 + accept成功时返回一个新的连接socket，该socket唯一地标识了被接受的这个连接，服务器可以通过读写该socket来与被接受连接对应的客户端通信。
 
-+ addr是一个传出参数，accept()返回时传出客户端的地址和端口号。addrlen参数是一个传入传出参数（value-result argument），传入的是调用者提供的缓冲区addr的长度以避免缓冲区溢出问题，传出的是客户端地址结构体的实际长度（有可能没有占满调用者提供的缓冲区）。如果给addr参数传NULL，表示不关心客户端的地址。
++ addr是一个传出参数，accept()返回时传出客户端的地址和端口号。addrlen参数是一个传入传出参数（value-result argument）， **传入的是调用者提供的缓冲区addr的长度以避免缓冲区溢出问题，传出的是客户端地址结构体的实际长度（有可能没有占满调用者提供的缓冲区）。** 如果给addr参数传NULL，表示不关心客户端的地址。
 
 + 头文件与函数调用
 
@@ -551,6 +551,213 @@ int main() {
     return 0;
 }
 ```
+
+### 8.数据读写
+
+
+
+
+
+
+
+
+
+### 9.socket选项
+
+> 如果fcntl系统调用是控制文件描述符属性的通用POSIX方法，那么下面两个系统调用则是专门用来读取和设置socket文件描述符属性的方法。
+
+```c
+#include<sys/socket>
+int getsockopt(int socket, int level, int option_name, void *restrict option_value,
+         socklen_t *restrict option_len);
+
+int setsockopt(int socket, int level, int option_name, const void *option_value,
+             socklen_t option_len);
+```
+
++ **参数：**
+
+  + sockfd参数指定被操作的目标socket
+  + level参数指定要操作哪个协议的选项，比如IPv4,IPv6,TCP
+  + option_name参数指定选项的名字，下表列举了socket通信中常见的socket选项
+  + option_value和option_len参数分别是被操作选项的值和长度
+
+  <div align = center><img src="../图片/UNIX2.png" width="700px" /></div>
+
+  + getsockopt与setsockopt函数成功时返回0，失败返回-1并设置errno。
+
++ 对于服务器而言，有部分socket选项 **只能在调用listen系统调用前针对监听socket设置才有效果。**
+
+  + 这是因为连接socket只能由accept调用返回，而accept从listen监听队列中接受的连接至少已经完成了TCP三次握手的前两个步骤(listen监听队列中的连接至少已经进入STN_RCVD状态)，这说明服务器已经往被接受连接上发送出了TCP同步报文段。
+
++ 但有的socket选项却应该在TCP同步报文段中设置，比如TCP最大报文段选项。
+
+  + 对于这种现象，Linux给开发人员提供的解决方案是：对监听socket设置这些socket选项，那么accpet返回的连接socket将自动继承这些选项。
+
++ 对客户端而言，这些socket选项应该在调用connect函数之前设置，因为connect调用成功返回之后，TCP三次握手已完成。
+
+#### SO_REUSEADDR选项
+
++ 服务器可以通过设置socket选项SO_REUSEADDR来强制使用被处于TIME_WAIT状态的连接占用的socket地址。
+
+  ```c
+  int sock = socket(AF_INET, SOCK_STREAM, 0);
+  int reuse = 1;
+  setsockopt(sock, SOL_SOCKET, SO_REUSEADDR, &reuse, sizeof(reuse));
+  ```
+
++ 经过setsockopt的设置之后，即使sock处于TIME_WAIT状态，与之绑定的socket地址也可以立即被重用。
+
+#### SO_RECBUF 和 SO_SNDBUF 选项
+
++ SO_RECBUF 和 SO_SNDBUF 选项分别表示TCP接收缓冲区和发送缓冲区的大小。
++ 不过用setsockopt来设置TCP的接收缓冲区和发送缓冲区的大小时，系统都会将其值加倍，而且不得小于某个最小值。
++ TCP接收缓冲区的最小值是256字节，而发送缓冲区的最小值是2048字节。系统这样做是为了确保一个TCP连接拥有足够的空闲缓冲区来处理拥塞。
+
+<div align = center><img src="../图片/UNIX3.png" width="700px" /></div>
+
++ 从服务器的输出来看，系统允许的TCP接受缓冲区最小为256字节。当设置TCP接收缓冲区的大小为50字节时，系统将忽略我们的设置。
++ 从客户端的输出来看，设置TCP发送缓冲区的大小被系统增加了一倍。
+
+#### SO_RCVLOWAT 和 SO_SNDLOWAT 选项
+
++ SO_RCVLOWAT 和 SO_SNDLOWAT 选项分别表示TCP接收缓冲区和发送缓冲区的低水位标记。它们一般被I/O复用系统调用来判断socket是否可读或可写。
++ 当TCP接收缓冲区中可读数据的总数大于其低水位标记时，I/O复用系统调用将通知应用程序可以从对应的socket上读取数据。
++ 当TCP发送缓冲区中的空余空间大于其低水位标记时，I/O复用系统调用将通知应用程序可以往对应的socket上写数据。
+
+#### SO_LINGER 选项
+
++ SO_LINGER 选项用于控制close系统调用在关闭TCP连接时的行为。在默认情况下，当使用close系统调用来关闭一个socket时，close将立即返回，TCP模块负责把该socket对应的TCP发送缓冲区中残留的数据发送给对方。
+
++ 在设置(获取)SO_LINGER选项的值时，需要给setsockopt系统调用传递一个linger类型的结构体：
+
+  ```c
+  #include<sys/socket.h>
+  struct linger 
+  {
+    	int l_onoff; //开启(非0)还是关闭(0)该选项
+    	int l_linger; //滞留时间
+  }
+  ```
+
++ 根据linger结构体中两个成员变量的不同值，close系统调用可能产生如下三种行为之一：
+
+  + l_onoff = 0。此时SO_LINGER 不起作用，close用默认行为来关闭socket
+
+  + l_onoff 不为0，l_linger = 0。此时close系统调用立即返回，TCP模块将丢弃被关闭的socket对应的TCP发送缓冲区中残留的数据，同时给对方发送一个复位报文段。这是一种异常终止连接的方法。
+
+  + l_onoff 不为0，l_linger 大于 0。此时close行为取决于两个条件：
+
+    + 被关闭的socket对应的TCP发送缓冲区是否还有残留的数据
+    + 该socket是阻塞的还是非阻塞的
+
+    > + 对于阻塞的socket，close将等待一段长为l_linger的时间，直到TCP模块发送完所有残留数据并得到对方的确认。那么close系统调用返回-1并设置errno为EWOULDBLOCK。
+    > + 如果socket非阻塞，close将立即返回，此时需要根据其返回值和errno来判断残留的数据是否已经发送完毕。
+
+### 10.网络信息API
+
+socket地址的两个要素IP地址与端口号，都是用数值表示，不便于记忆，所以用服务名称来代替，更有利于记忆。有些网络信息API就是来实现这些功能的。
+
+#### gethostbyname 和 gethostbyaddr
+
++ gethostbyname 函数根据主机名称获取主机完整信息，通常现在本地的`/etc/hosts`配置文件中查找主机，如果没找到，再去访问DNS服务器。
++ gethostbyaddr函数根据IP地址获取主机完整信息。
+
+```c
+#include <netdb.h>   
+struct hostent * gethostbyname(const char *name);
+struct hostent * gethostbyaddr(const void *addr, socklen_t len, int type);
+```
+
++ **参数:**
+  + name参数指定目标主机的主机名
+  + addr参数指定目标主机的IP地址
+  + len参数指定addr所指IP地址的长度
+  + type参数指定addr所指IP地址的类型(AF_INET，AF_INET6)
++ 这两个函数返回的都是hostent结构体类型的指针(man 查阅手册)
+
+#### getservbyname 和 getservbyport
+
++ getservbyname 函数根据名称获取某个服务的完整信息
++ getservbyport函数根据端口号获取某个服务的完整信息，两种都是读取`/etc/services`文件来获取服务信息。
+
+```c
+#include <netdb.h>
+
+struct servent * getservbyname(const char *name, const char *proto);
+struct servent * getservbyport(int port, const char *proto);
+```
+
++ 参数：
+  + name参数指定目标服务的名字
+  + port参数指定目标服务对应的端口号
+  + proto参数指定服务类型，给它传递"tcp"表示获取流服务，传递"udp"表示获取数据报服务，传递NULL表示获取所里有类型的服务
++ 两个函数都是返回servent结构体的指针。
+
+> 以上四个函数都是不可重入，即非线性安全的。如果使用可重入版本，函数后面加上`_r`。
+
+#### getaddrinfo
+
++ getaddrinfo函数既能通过主机名获取IP地址，也能通过服务名获取端口号。它是否可重入取决于其内部调用的gethostbyname和getservbyname函数是否是它们可重入版本。
+
++ 函数定义：
+
+  ```c
+  #include <netdb.h>
+  
+  int getaddrinfo(const char *hostname, const char *servname, const struct addrinfo *hints, struct addrinfo **res);
+  ```
+
+  + hostname可以接受主机名也能接受字符串表示的IP地址
+  + servname可以接受字符串表示的十进制端口号，也可以接收服务名
+  + hints参数可以被设置为NULL，表示允许getaddrinfo反馈任何可用的结果
+  + res指向一个链表，用于存储getaddrinfo反馈的结果，反馈的每个结果都是addrinfo结构体类型的对象。
+
+#### getnameinfo
+
++ getnameinfo可以通过socket地址同时获取字符串表示的主机名和服务名。是否可重入取决于其内部调用的gethostbyaddr和getservbyport函数是否是它们的可重入版本。
+
++ 函数定义：
+
+  ```c
+  #include <netdb.h>
+  
+  int getnameinfo(const struct sockaddr *sa, socklen_t salen, char *host, socklen_t hostlen, char *serv, socklen_t servlen, int flags);
+  ```
+
+  + getnameinfo将返回的主机名存储在host参数指向的缓存中
+  + 服务名存储在serv参数指向的缓存中
+  + hostlen和servlen分别制定这两块缓存的长度
+  + flags参数控制getnameinfo的行为
+
+getaddrinfo和getnameinfo函数成功时返回0，失败则返回错误码。
+
+<div align = center><img src="../图片/UNIX4.png" width="700px" /></div>
+
+> Linux 下的strerror函数能将数值错误码errno转换成易读的字符串形式。下面的函数可将表中的错误码转换成其字符串形式：
+>
+> ```c
+> #include<netdb.h>
+> const char* gai_strerror(int error)
+> ```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
