--- a/Linux操作/2.Linux网络嵌套字编程.md
+++ b/Linux操作/2.Linux网络嵌套字编程.md
@@ -554,13 +554,104 @@ int main() {
 
 ### 8.数据读写
 
+#### TCP 数据读写
+
+```c
+#include <sys/socket.h>
+#include <sys/types.h>
+
+ssize_t
+recv(int socket, void *buffer, size_t length, int flags);
+
+ssize_t
+  send(int socket, const void *buffer, size_t length, int flags);
+```
+
++ recv读取socket上的数据
+  + buffer 和 length参数分别指定读缓冲区的位置和大小
+  + flags参数通常设置为0
++ recv成功时返回实际读到的数据的长度，可能小于期望的长度length。因此可能需要多次调用recv，才能读取到完整的数据。
++ recv可能返回0，意味着通信对方已经关闭链接了。出错时返回-1并设置errno
+
++ send往socket上写数据，buffer和length参数分别指定写缓冲区的位置和大小。
++ send成功时返回实际写入的数据的长度，失败时返回-1并设置errno。
 
 
 
+#### UDP数据读写
 
+```c
+#include <sys/socket.h>
+#include <sys/types.h>
 
+ssize_t
+recvfrom(int socket, void *restrict buffer, size_t length, int flags,
+struct sockaddr *restrict address, socklen_t *restrict address_len);
 
+ssize_t
+  sendto(int socket, const void *buffer, size_t length, int flags,
+         const struct sockaddr *dest_addr, socklen_t dest_len);
+```
 
++ recvfrom读取socket上的数据。buffer 和 length参数分别指定读缓冲区的位置和大小。
++ 因为UDP通信没有连接的概念，所以每次读取数据的时候都需要获取发送端的socket地址，即参数address所指的内容，address_len则指定该地址的长度。
+
++ sendto往socket上写数据，buffer和length参数分别指定写缓冲区的位置和大小。dest_addr参数指定接收端的socket地址，dest_len参数则指定该地址的长度。
+
+recvfrom/sendto系统调用也可以用于面向连接的socket的数据读写，只需要把最后两个参数都设置为NULL以忽略发送端/接收端的socket地址。
+
+#### 通用数据读写函数
+
+```c
+#include <sys/socket.h>
+#include <sys/types.h>
+
+ssize_t
+recvmsg(int socket, struct msghdr *message, int flags);
+
+ssize_t
+  sendmsg(int socket, const struct msghdr *message, int flags);
+```
+
++ 它们不仅能用于TCP流数据，也能用于UDP数据报。
+
++ socket参数指定被操作的目标，message参数是msghdr结构体类型的指针
+
+  + msghdr的结构体定义如下：
+
+    ```c
+    struct msghdr {
+    		void            *msg_name;      /* optional address socket地址*/
+    		socklen_t       msg_namelen;    /* size of address socket地址的长度*/
+    		struct          iovec *msg_iov; /* scatter/gather array 分散的内存块*/
+    		int             msg_iovlen;     /* # elements in msg_iov 内存块的数量*/
+    		void            *msg_control;   /* ancillary data, see below 指向辅助数据的起始位置*/
+    		socklen_t       msg_controllen; /* ancillary data buffer len 辅助数据的大小*/
+    		int             msg_flags;      /* flags on received message 复制函数中的flags参数，并在调用过程中更新*/
+    };
+    ```
+
+  + msg_name成员指向一个socket地址结构变量，指向通信对方的socket地址。对于TCP协议，该成员无意义，必须设置为NULL。
+
+  + msg_namelen成员指定了msg_name所指socket地址的长度
+
+  + msg_iov成员时iovec结构体类型的指针，iovec结构体定义：
+
+    ```c
+    struct iovec
+    {
+    		void *iov_base;
+    		size_t iov_len;
+    }
+    ```
+
+    + iovec结构体封装了一块内存的起始位置和长度
+
+  + msg_control和msg_controllen成员用于辅助数据的传送。
+
+  + msg_flags成员无须设定，会复制recvmsg/sendmsg的flags参数的内容以影响数据读写过程。
+
++ recvmsg/sendmsg的flags参数以及返回值的含义均与send/recv的flags参数及返回值相同。
 
 ### 9.socket选项
 
